layout shift fix for performance

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -61,7 +61,3 @@ a {
   display: flex;
   justify-content: center;
 }
-
-footer {
-  min-height: 100px;
-}
